# Graphics_Labs

./: CMakeLists.txt  README.md  main.cpp
assets/shaders/: simple.frag
lab1/assets/shaders/: simple.frag
lab3/: main.cpp
lab3/assets/shaders/: simple.vert
lab5/Example3-2/: CMakeLists.txt  main.cpp
lab5/Example3-2/assets/shaders/: simple.vert
lab7/Example5/: main.cpp
lab7/Example5/assets/shaders/: simple.vert
lab9/Example6/: main.cpp
lab9/Example6/assets/shaders/: simple.frag  simple.vert
